# Telegram-bot-AI-with-Rust

./: Cargo.toml
src/: lib.rs  main.rs
src/splitter/: mod.rs
