[package]
name = "aitelebot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
ollama-rs = {version = "0.2.0", features = ["stream", "chat-history", "function-calling"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0.86"
futures = "0.3"
serde = "1.0.203"
serde_json = "1.0"
